--- a/Markup/css/styles.css
+++ b/Markup/css/styles.css
@@ -30,13 +30,8 @@ h6 {
 /* 2.0 Header */
 .header {
     padding-top: 30px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 10000;
     width: 100%;
-    height: 900px;
+    height: 100px;
     
 }
 .header__inner{
@@ -63,10 +58,11 @@ h6 {
 .nav__link:hover{
     color: red;
 }
+.nav__menu-button{
+    visibility: hidden;
+}
 /* 2.1 Intro */
 .intro {
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     width: 100%;
     height: 640px;
@@ -80,7 +76,7 @@ h6 {
 
 }
 .intro__background{
-
+    
 }
 .intro__background-img{
     width: 100%;
