--- a/Markup/css/styles.css
+++ b/Markup/css/styles.css
@@ -68,15 +68,20 @@ h6 {
     height: 640px;
     margin: 0 auto;
 }
+.intro__wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 .intro__inner{
+    position: relative;
+    top: 50%;
+    left: 50%;
     width: 100%;
     max-width: 750px;
     text-align: center;
     margin: 0 auto;
 
-}
-.intro__background{
-    
 }
 .intro__background-img{
     width: 100%;
@@ -101,10 +106,6 @@ h6 {
 }
 .service{
     width: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: 1;
 
 }
 .service__inner{
