--- a/Markup/css/styles.css
+++ b/Markup/css/styles.css
@@ -38,7 +38,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
     margin: 0;
 }
 .container {
@@ -51,7 +52,6 @@ h6 {
 .header {
     padding-top: 30px;
     width: 100%;
-    height: 100px;
     
 }
 .header__inner{
@@ -85,7 +85,7 @@ h6 {
 .intro {
     justify-content: center;
     width: 100%;
-    height: 640px;
+    
     margin: 0 auto;
 }
 .intro__wrapper{
@@ -125,11 +125,12 @@ h6 {
     line-height: 34px;
     color: #43484d;
     font-weight: 300;
-    width: 570px;
+    max-width: 570px;
     margin: 0 auto;
 }
 .service{
     width: 100%;
+    text-align: left;
 }
 .service__inner{
     display: flex;
@@ -151,7 +152,7 @@ h6 {
     justify-content: center;
 }
 .service__item-content-wrapper{
-    width: calc(100% - 50px);
+    width: calc(100% - 20px);
 }
 .service__item-suptitle{
     font-size: 12px;
@@ -174,19 +175,19 @@ h6 {
 }
 /* Breaker */
 .breaker{
+    width: 100%;
+    height: 40px;
+    background: #eeeeee;
     margin-top: 75px;
     margin-bottom: 95px;
 }
 /* 3.0 Section 1 */
-.section {
-    padding: 100px 0;
-}
+
 .section__header{
     width: 100%;
     max-width: 580px;
     margin: 0 auto;
     margin-bottom: 70px;
-
 }
 .section__suptitle {
     font-size: 18px;
@@ -197,7 +198,6 @@ h6 {
 }
 .section__title{
     font-size: 52px;
-    letter-spacing: -2px;
     line-height: 58px;
     color: #43484d;
     font-weight: 300;
@@ -231,7 +231,6 @@ h6 {
 }
 .transfering__title{
     font-size: 52px;
-    letter-spacing: -2px;
     line-height: 58px;
     color: #ffffff;
     font-weight: 300;
@@ -248,10 +247,10 @@ h6 {
     width: 100%;
     background: #000;
     opacity: 0.3;
-    height: 100%;
+    height: 98%;
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 49%;
     transform: translate(-50%, -50%);
 }
 .tranfering__background-img{
@@ -262,14 +261,11 @@ h6 {
 .trasnfering__service{
     width: 100%;
     position: absolute;
-    top: 52%;
+    top: 57%;
 }
 .trasnfering__item{
     width: 32%;
     margin: auto;
-}
-.trasnfering__item-img-wrapper{
-    
 }
 .trasnfering__item-img{
     transform: translate(-50%, -50%);
@@ -290,13 +286,13 @@ h6 {
 /* 5.0 Section 3 */
 .product__header{
     width: 100%;
-    max-width: 600px;
+    max-width: 660px;
     margin: 0 auto;
     margin-bottom: 70px;
 }
 .product__title{
     font-size: 52px;
-    letter-spacing: -2px;
+    letter-spacing: 0px;
     line-height: 58px;
     color: #43484d;
     font-weight: 300;
@@ -381,7 +377,7 @@ h6 {
     line-height: 35px;
     color: #ffffff;
     font-weight: 500;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 .contact-text{
     font-size: 16px;
@@ -391,7 +387,10 @@ h6 {
     margin-bottom: 70px;
 }
 .contact-text p{
-    margin-bottom: 20px;
+    margin: 0px 0px 5px 0px;
+}
+.subscribe{
+    text-align: left;
 }
 .subscribe__header{
     font-size: 18px;
@@ -404,4 +403,49 @@ h6 {
     line-height: 24px;
     color: #bdc6cf;
     font-weight: 400;
+    width: 100%;
+    max-width: 250px;
+    margin-bottom: 30px;
+}
+.subscribe__form{
+    width: 100%;
+    display: flex;
+}
+.subscribe__form-text{
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: 400;
+    border: 2px solid;
+    border-radius: 15%;
+    
+}
+.subscribe__form-text input{
+    background-color: #5e6977;
+    border: 1px solid #63686d;
+    border-radius: 15%;
+}
+.subscribe__form-text:focus{
+    outline: green;
+}
+input[type=text] {
+    color: #ffffff;
+    padding: 5px;
+}
+input:focus{
+    outline: green;
+}
+input::placeholder {
+    color: #ffffff;
+    padding: 5px;
+    opacity: 0.5; 
+  }
+.subscribe__from-button{
+    background-color: #7dc855;
+    width: 35px;
+    height: 31px;
+    padding: 10px;
+    display: flex;
+    border-radius: 0 20% 20% 0;
+    justify-content: center;
+    margin-left: -10px;
 }
