--- a/Markup/css/styles.css
+++ b/Markup/css/styles.css
@@ -54,6 +54,22 @@ p {
     width: 100%;
     
 }
+.header.fixed{
+    background-color:#eeeeee;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10000;
+    transform: translate3d(0, 0, 0);
+}
+.header.active{
+    background-color:#eeeeee;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10000;
+}
 .header__inner{
     display: flex;
     justify-content: space-between;
@@ -66,6 +82,7 @@ p {
     color: #43484d;
     font-weight: 500;
 }
+
 .nav__link{
     display: inline-block;
     vertical-align: top;
@@ -73,13 +90,67 @@ p {
     color: #43484d;
     text-decoration: none;
     transition: color 0.2s linear;
-
 }
 .nav__link:hover{
     color: red;
 }
-.nav__menu-button{
-    visibility: hidden;
+/* Nav toggle */
+.nav-toggle{
+    width: 30px;
+    padding: 15px 0;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    z-index: 1;
+    font-size: 0px;
+    color: transparent;
+    border: 0;
+    background: none;
+    cursor: pointer;
+    display: none;
+
+}
+.nav-toggle.active .nav-toggle__item{
+    background: none;
+}
+.nav-toggle.active .nav-toggle__item::before{
+    transform-origin: left top;
+    transform: rotate(45deg) translateX(1px)
+    translateY(-5px);;
+}
+.nav-toggle.active .nav-toggle__item::after{
+    transform-origin: left bottom;
+    transform: rotate(-45deg)translateX(2px)
+    translateY(4px);
+}
+.nav-toggle__item{
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: #000000;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    
+}
+.nav-toggle__item:before,
+.nav-toggle__item:after{
+    content: "";
+    width: 100%;
+    height: 3px;
+    background-color: #000000;
+    position: absolute;
+    left: 0;
+    z-index: 1;
+}
+.nav-toggle__item:before{
+    top: -8px;
+}
+.nav-toggle__item:after{
+    top: 8px;
 }
 /* 2.1 Intro */
 .intro {
@@ -209,6 +280,13 @@ p {
     color: #5e6977;
     font-weight: 300;
 }
+.single-item .slick-slide{
+    height: 350px;
+    margin: auto;
+}
+.single-item .slick-prev{
+    display: none !important;
+}
 /* 4.0 Section 2 */
 .transfering__wrapper{
     position: relative;
@@ -327,6 +405,14 @@ p {
     font-weight: 400;
     opacity: 0.7;
 }
+/* Slider */
+.single-item1 .slick-prev{
+    display: none !important;
+}
+/* .single-item1 .slick-next{
+    display: none !important;
+} */
+
 /* Footer */
 .footer{
      background-color: #43484d; 
