--- a/Landing_2/css/style.css
+++ b/Landing_2/css/style.css
@@ -456,7 +456,7 @@ button {
 .footer__list h5 {
   font-size: 12px;
   line-height: 2;
-  font-weight: 700 bold;
+  font-weight: 700;
   color: #ffffff;
   margin-bottom: 20px;
 }
