--- a/Markup/scss/style.scss
+++ b/Markup/scss/style.scss
@@ -1,3 +1,11 @@
+$header__border-color: 1px solid rgba(255, 255, 255, .1);
+$mainColor: #ffffff;
+@mixin font ($font-size, $line-height, $font-weight){
+  font-size: $font-size;
+  line-height: $line-height;
+  font-weight: $font-weight;
+  @content;
+}
 /*---------------------------------
 
    TABLE OF CONTENTS:
@@ -43,10 +51,13 @@ p {
     margin: 0;
 }
 .container {
-    width: 100%;
-    max-width: 1140px;
+    max-width: 1200px;
+    padding: 0 30px;
     margin: 0 auto;
     
+}
+section{
+    margin-top: 80px;
 }
 /* 2.0 Header */
 .header {
@@ -153,57 +164,34 @@ p {
     top: 8px;
 }
 /* 2.1 Intro */
-.intro {
-    justify-content: center;
-    width: 100%;
+.cover{
+        background: url(../img/Map.svg) no-repeat center;
+        background-size: contain;
+        padding: 10vh 0;
+    }
+.intro__inner-wrapper{
     
-    margin: 0 auto;
-}
-.intro__wrapper{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-.intro__banner{
-    position: relative;
-}
-.intro__inner{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    max-width: 750px;
-    text-align: center;
-    margin: 0 auto;
-
-}
-.intro__background-img{
-    width: 100%;
-    object-fit: contain;
-    object-position: 50% 50%;
-}
-.intro__title{
-    font-size: 72px;
-    letter-spacing: -1px;
-    line-height: 72px;
-    color: #43484d;
-    font-weight: 900;
-    margin-bottom: 20px;
-}
-.intro__subtitle{
-    font-size: 26px;
-    line-height: 34px;
-    color: #43484d;
-    font-weight: 300;
-    max-width: 570px;
-    margin: 0 auto;
+    h1{
+        @include font(72px, 1, 900){
+            letter-spacing: -1px;
+            color: #43484d;
+        };
+        max-width: 750px;
+        margin: 20px auto;
+    }
+    h3{
+        @include font(26px, 1.3, 300){
+            color: #43484d;
+            margin: auto;
+        };
+        max-width: 570px;
+    }
 }
 .service{
     width: 100%;
     text-align: left;
 }
-.service__inner{
+.service-wrapper{
     display: flex;
     justify-content: space-between;
 }
@@ -244,16 +232,7 @@ p {
     color: #89929c;
     font-weight: 400;
 }
-/* Breaker 1 */
-.breaker{
-    width: 100%;
-    height: 40px;
-    background: #eeeeee;
-    margin-top: 75px;
-    margin-bottom: 95px;
-}
 /* 3.0 Section 1 */
-
 .section__header{
     width: 100%;
     max-width: 580px;
@@ -298,67 +277,48 @@ p {
     border: none;
     border-radius: 10%;
 }
-/* Breaker 2 */
-.breaker-two{
-    width: 100%;
-    height: 40px;
-    background: #eeeeee;
-    margin-top: 75px;
-    margin-bottom: 0px;
-}
 /* 4.0 Section 2 */
-.transfering__wrapper{
+.transfering{
+    background: url('../img/Image2.svg') center no-repeat;
+    background-size: cover;
     position: relative;
+    height: 100vh;
+}
+.transfering-overlay{
+    background-color: #000000;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    opacity: 0.5;
+
 }
 .trasnfering__header{
-    position: absolute;
-    top: 38%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
     max-width: 660px;
     text-align: center;
+    margin: 70px auto;
+    h5{
+        @include font(18px, 1, 500){
+             
+        };
+        margin-bottom: 20px;
+    }
+    h2{
+        @include font(52px, 1.115, 300){
+            
+        };
+        margin-bottom: 20px;
+    }
+    p{
+        @include font(22px, 1.454, 300){
+        };
+    }
+    h5, h2, p{
+        color: #ffffff;
+    }
 }
-.transfering__suptitle{
-    font-size: 18px;
-    line-height: 18px;
-    color: #ffffff;
-    font-weight: 500;
-    margin-bottom: 20px;
-}
-.transfering__title{
-    font-size: 52px;
-    line-height: 58px;
-    color: #ffffff;
-    font-weight: 300;
-    margin-bottom: 20px;
-}
-.transfering__text{
-    font-size: 22px;
-    line-height: 32px;
-    color: #ffffff;
-    font-weight: 300;
-    opacity: 0.5;
-}
-.section-overlay{
-    width: 100%;
-    background: #000;
-    opacity: 0.3;
-    height: 98%;
-    position: absolute;
-    left: 50%;
-    top: 49%;
-    transform: translate(-50%, -50%);
-}
-.tranfering__background-img{
-    width: 100%;
-    object-fit: cover;
-    object-position: 50% 50%;
-}
-.trasnfering__service{
-    width: 100%;
-    position: absolute;
-    top: 57%;
+.transfering__service{
+    display: flex;
 }
 .trasnfering__item{
     width: 32%;
@@ -367,25 +327,14 @@ p {
 .trasnfering__item-img{
     transform: translate(-50%, -50%);
 }
-.trasnfering__item-title{
-    font-size: 18px;
-    line-height: 25px;
+.service__item-content-wrapper{
     color: #ffffff;
-    font-weight: 400;
-}
-.trasnfering__item-subtitle{
-    font-size: 16px;
-    line-height: 25px;
-    color: #ffffff;
-    font-weight: 400;
-    opacity: 0.5;
-}
-.breaker-three{
-    width: 100%;
-    height: 40px;
-    background: #eeeeee;
-    margin-top: -10px;
-    margin-bottom: 110px;
+    h3{
+        @include font(18px, 1.388, 400);
+    }
+    p{
+        @include font(16px, 1.5625, 400)
+    }
 }
 /* 5.0 Section 3 */
 .product__header{
